--- a/template/profile.html
+++ b/template/profile.html
@@ -3014,6 +3014,9 @@
 		<script src="assets/js/bootstrap-editable.min.js"></script>
 		<script src="assets/js/ace-editable.min.js"></script>
 		<script src="assets/js/jquery.maskedinput.min.js"></script>
+		
+		<!-- webcam script -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.25/webcam.min.js"></script>
 
 		<!-- ace scripts -->
 		<script src="assets/js/ace-elements.min.js"></script>
